--- a/joici.html
+++ b/joici.html
@@ -14,9 +14,9 @@
     <p>
 		Tenho 2 irmãs; </p>
 		<p>
-		Gosto de sair, ver filmes, séries, e comer. </p>
+		Gosto de sair, ver filmes, séries, e comer; </p>
 		<p>
-		Joici pagar 10 Real para o Daniel.
+		Também gosto de dormir.
 	</p>
 
 
